// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HEADER should match the snapshot 1`] = `
<header>
  <Link
    replace={false}
    to="/"
  >
    <img
      alt="home logo"
      className="logo"
      src="logo.svg"
    />
  </Link>
  <div
    className="controls-container"
  >
    <form
      className="search-form"
      role="search"
    >
      <label>
        <input
          autoComplete="off"
          className="search-field"
          onChange={[Function]}
          placeholder="Search movies"
          style={
            Object {
              "backgroundImage": "url(search-icon.svg)",
            }
          }
          type="search"
        />
      </label>
      <input
        className="search-submit"
        type="submit"
      />
    </form>
    <img
      alt="user tile"
      className="tile"
      onClick={[Function]}
      src={
        Object {
          "ReactComponent": [Function],
          "__esModule": true,
          "default": "superhero-c.svg",
        }
      }
    />
  </div>
</header>
`;

exports[`HEADER should match the snapshot with props 1`] = `
<header>
  <Link
    replace={false}
    to="/"
  >
    <img
      alt="home logo"
      className="logo"
      src="logo.svg"
    />
  </Link>
  <div
    className="controls-container"
  >
    <form
      className="search-form"
      role="search"
    >
      <label>
        <input
          autoComplete="off"
          className="search-field"
          onChange={[Function]}
          placeholder="Search movies"
          style={
            Object {
              "backgroundImage": "url(search-icon.svg)",
            }
          }
          type="search"
        />
      </label>
      <input
        className="search-submit"
        type="submit"
      />
    </form>
    <img
      alt="user tile"
      className="tile"
      onClick={[Function]}
      src={
        Object {
          "ReactComponent": [Function],
          "__esModule": true,
          "default": "superhero-a.svg",
        }
      }
    />
  </div>
</header>
`;
